basic functionality with gui and parameters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,7 +271,7 @@ endif()
 # Explicit march setting for Clang
 ################################################################################
 
-if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+if ("${+}" MATCHES "Clang")
     set_source_files_properties(xmrstak/backend/cpu/crypto/cn_gpu_avx.cpp PROPERTIES COMPILE_FLAGS "-mavx2")
 endif()
 
